--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,9 @@
 body {
 	font-family: Helvetica Neue;
+	color: #333;
 }
 
 h1 {
-	font-weight: normal;
 	font-size: 24px;
 	margin: -4px 0 0 20px;
 	color: #222;
@@ -13,6 +13,10 @@ h2 {
 	font-weight: normal;
 	font-size: 20px;
 	margin: 0;
+}
+
+p {
+	line-height: 28px;
 }
 
 #logo {
@@ -28,6 +32,7 @@ h2 {
 .header {
 	background-color: #222;
 	padding: 200px 0 250px;
+	margin-bottom: 30px;
 }
 
 .social {
@@ -46,6 +51,11 @@ h2 {
 	padding: 50px 0;
 }
 
+.container {
+	max-width: 1000px;
+	margin: auto;
+}
+
 .greybg {
 	background-color: #eee;
 }
@@ -59,7 +69,10 @@ h2 {
 .box50 {
 	width: 50%;
 	float: left;
-	padding: -20px;
+}
+
+.box50 > p {
+	margin-right: 80px;
 }
 
 .content {
@@ -70,6 +83,7 @@ h2 {
 	width: 150px;
 	float: left;
 	text-align: center;
+	margin-bottom: 20px;
 }
 
 .participant > img {
