added week 5 tech blog

--- a/blog-posts/stylesheets/blog.css
+++ b/blog-posts/stylesheets/blog.css
@@ -160,6 +160,23 @@ article li {
 	font-family: "Courier New";
 }
 
+.code-comment {
+    color: #BBB;
+    font-style: italic;
+}
+
+.p2 {
+    margin-left: 20px;
+}
+
+.p3 {
+    margin-left: 40px;
+}
+
+.p4 {
+    margin-left: 60px;
+}
+
 
 /*--- TERMINAL WINDOW ---*/
 
